Supporting zero argument methods