@@ -8,11 +8,11 @@
         <relativePath>../pom.xml</relativePath>
         <groupId>JPassport</groupId>
         <artifactId>JPassport-parent</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.1</version>
     </parent>
 
     <artifactId>JPassport-tests</artifactId>
-    <version>0.3.0</version>
+    <version>0.4.1</version>
 
     <!--    <name>JPassport</name>-->
     <packaging>jar</packaging>
@@ -22,7 +22,7 @@
     <properties>
 <!--        <maven.compiler.source>16</maven.compiler.source>-->
 <!--        <maven.compiler.target>16</maven.compiler.target>-->
-        <maven.compiler.release>16</maven.compiler.release>
+        <maven.compiler.release>17</maven.compiler.release>
     </properties>
 
         <dependencies>
@@ -49,17 +49,17 @@
             <dependency>
                 <groupId>org.openjdk.jmh</groupId>
                 <artifactId>jmh-core</artifactId>
-                <version>1.29</version>
+                <version>1.32</version>
             </dependency>
             <dependency>
                 <groupId>org.openjdk.jmh</groupId>
                 <artifactId>jmh-generator-annprocess</artifactId>
-                <version>1.29</version>
+                <version>1.32</version>
             </dependency>
             <dependency>
                 <groupId>JPassport</groupId>
                 <artifactId>JPassport-main</artifactId>
-                <version>0.3.0</version>
+                <version>0.4.1</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -77,7 +77,7 @@
                     <version>3.0.0-M5</version>
                     <configuration>
                         <argLine>
-                            -Dforeign.restricted=permit
+                            --enable-native-access jpassport
                         </argLine>
                     </configuration>
                 </plugin>
